--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Vape4Life — Elige tu tipo de compra</title>
+  <link rel="stylesheet" href="assets/css/styles.css" />
+</head>
+<body>
+  <main class="container">
+    <header class="header">
+      <img class="logo" src="assets/img/logo.svg" alt="Vape4Life" />
+      <h1>¿Compras para negocio o para ti?</h1>
+      <p class="sub">
+        Elige tu experiencia: <b>Mayorista</b> (precios por volumen) o <b>Minorista</b> (compra rápida).
+      </p>
+    </header>
+
+    <section class="cards">
+      <button class="card" data-target="mayorista">
+        <h2>Mayorista</h2>
+        <p>Precios por volumen • pedidos grandes • condiciones B2B</p>
+      </button>
+
+      <button class="card" data-target="minorista">
+        <h2>Minorista</h2>
+        <p>Compra rápida • unidades • promos retail</p>
+      </button>
+    </section>
+
+    <footer class="footer">
+      <button class="link" id="reset">Cambiar elección</button>
+      <span class="muted">© Vape4Life</span>
+    </footer>
+  </main>
+
+  <script src="assets/js/main.js"></script>
+</body>
+</html>
 
