Add mayorista.html for wholesale pricing page

--- a/pages/mayorista.html
+++ b/pages/mayorista.html
@@ -1,1 +1,29 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mayorista — Vape4Life</title>
+  <link rel="stylesheet" href="../assets/css/styles.css" />
+</head>
+<body>
+  <main class="container">
+    <header class="header">
+      <h1>Mayorista</h1>
+      <p class="sub">Precios por volumen y pedidos B2B.</p>
+    </header>
+
+    <section class="cards">
+      <a class="card" href="https://mayorista.vape4life.shop" style="text-decoration:none">
+        <h2>Entrar a Mayorista</h2>
+        <p>Catálogo completo y precios al por mayor.</p>
+      </a>
+      <a class="card" href="../index.html" style="text-decoration:none">
+        <h2>Cambiar a Minorista</h2>
+        <p>Volver y elegir otra opción.</p>
+      </a>
+    </section>
+  </main>
+</body>
+</html>
 
