Update title and content for minorista page

--- a/pages/minorista.html
+++ b/pages/minorista.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mayorista — Vape4Life</title>
+  <title>Tienda — Vape4Life</title>
   <link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 <body>
   <main class="container">
     <header class="header">
       <h1>Mayorista</h1>
-      <p class="sub">Precios por volumen y pedidos B2B.</p>
+      <p class="sub">Precios especiales y pedidos a domicilio.</p>
     </header>
 
     <section class="cards">
       <a class="card" href="https://tienda.vape4life.shop" style="text-decoration:none">
-        <h2>Entrar a Mayorista</h2>
-        <p>Catálogo completo y precios al por mayor.</p>
+        <h2>Entrar a Tienda</h2>
+        <p>Catálogo completo y precios de locura.</p>
       </a>
       <a class="card" href="../index.html" style="text-decoration:none">
-        <h2>Cambiar a Minorista</h2>
+        <h2>Cambiar a Mayorista</h2>
         <p>Volver y elegir otra opción.</p>
       </a>
     </section>
