--- a/index.html
+++ b/index.html
@@ -3,38 +3,290 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vape4Life — Elige tu tipo de compra</title>
+  <title>Vape4Life — Mayorista y Minorista</title>
+  <meta name="description" content="Vape4Life: compra mayorista o minorista. Catálogo, atención por WhatsApp, envíos y tienda física." />
+
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
+
 <body>
-  <main class="container">
-    <header class="header">
-      <img class="logo" src="assets/img/logo.svg" alt="Vape4Life" />
-      <h1>¿Compras para negocio o para ti?</h1>
-      <p class="sub">
-        Elige tu experiencia: <b>Mayorista</b> (precios por volumen) o <b>Minorista</b> (compra rápida).
-      </p>
-    </header>
+  <!-- Top bar -->
+  <header class="topbar">
+    <div class="wrap topbar__inner">
+      <a class="brand" href="./">
+        <span class="brand__mark">V4L</span>
+        <span class="brand__name">Vape4Life</span>
+      </a>
 
-    <section class="cards">
-      <button class="card" data-target="mayorista">
-        <h2>Mayorista</h2>
-        <p>Precios por volumen • pedidos grandes • condiciones B2B</p>
-      </button>
+      <nav class="nav">
+        <a href="#sobre">Sobre</a>
+        <a href="#ventajas">Ventajas</a>
+        <a href="#selector">Mayorista / Minorista</a>
+        <a href="#contacto">Contacto</a>
+      </nav>
 
-      <button class="card" data-target="minorista">
-        <h2>Minorista</h2>
-        <p>Compra rápida • unidades • promos retail</p>
+      <div class="topbar__cta">
+        <a class="btn btn--ghost" id="wa-top" href="https://wa.me/593XXXXXXXXX?text=Hola%20Vape4Life%2C%20quiero%20informaci%C3%B3n" target="_blank" rel="noopener">
+          WhatsApp
+        </a>
+      </div>
+
+      <button class="burger" aria-label="Abrir menú" aria-expanded="false">
+        <span></span><span></span><span></span>
       </button>
+    </div>
+
+    <div class="mobile" id="mobileMenu" hidden>
+      <div class="wrap mobile__inner">
+        <a href="#sobre" class="mobile__link">Sobre</a>
+        <a href="#ventajas" class="mobile__link">Ventajas</a>
+        <a href="#selector" class="mobile__link">Mayorista / Minorista</a>
+        <a href="#contacto" class="mobile__link">Contacto</a>
+        <a class="btn btn--primary mobile__btn" href="#selector">Elegir tipo de compra</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <main>
+    <section class="hero">
+      <div class="wrap hero__grid">
+        <div class="hero__copy">
+          <div class="pill">Mayorista • Minorista • Ecuador</div>
+          <h1>Tu tienda de vapeo con una experiencia clara: <span class="invert">negocio</span> o <span class="invert">personal</span>.</h1>
+          <p>
+            Catálogo completo, atención directa y procesos simples. Entra como <b>Mayorista</b> si compras para reventa,
+            o como <b>Minorista</b> si compras para ti.
+          </p>
+
+          <div class="hero__actions">
+            <a class="btn btn--primary" href="#selector">Elegir Mayorista / Minorista</a>
+            <a class="btn btn--ghost" href="#contacto">Ver ubicación y contacto</a>
+          </div>
+
+          <div class="hero__stats">
+            <div class="stat">
+              <div class="stat__k">Envíos</div>
+              <div class="stat__v">a nivel nacional</div>
+            </div>
+            <div class="stat">
+              <div class="stat__k">Atención</div>
+              <div class="stat__v">WhatsApp directo</div>
+            </div>
+            <div class="stat">
+              <div class="stat__k">Stock</div>
+              <div class="stat__v">rotación real</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="hero__media">
+          <!-- Cambia esta imagen -->
+          <img src="assets/img/hero.webp" alt="Vape4Life" loading="lazy" />
+          <div class="hero__badge">
+            <span class="dot"></span> Disponible ahora
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sobre -->
+    <section id="sobre" class="section">
+      <div class="wrap">
+        <div class="section__head">
+          <h2>Sobre Vape4Life</h2>
+          <p>
+            Enfocados en ofrecer productos y atención con procesos claros. Sin vueltas: eliges tu tipo de compra y listo.
+          </p>
+        </div>
+
+        <div class="grid3">
+          <article class="card">
+            <h3>Experiencia rápida</h3>
+            <p>Compra sin fricción: selección clara, pasos directos, atención real.</p>
+          </article>
+          <article class="card">
+            <h3>Mayorista de verdad</h3>
+            <p>Condiciones para negocio: volumen, precios y comunicación enfocada a B2B.</p>
+          </article>
+          <article class="card">
+            <h3>Retail sencillo</h3>
+            <p>Minorista con promos, compras por unidad, y soporte por WhatsApp.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Ventajas -->
+    <section id="ventajas" class="section section--alt">
+      <div class="wrap">
+        <div class="section__head">
+          <h2>Lo que te damos</h2>
+          <p>Una operación seria: claridad, velocidad y soporte.</p>
+        </div>
+
+        <div class="grid2">
+          <article class="panel">
+            <h3>Atención y soporte</h3>
+            <ul class="list">
+              <li>WhatsApp directo</li>
+              <li>Respuesta rápida</li>
+              <li>Seguimiento en pedidos</li>
+            </ul>
+          </article>
+
+          <article class="panel">
+            <h3>Logística</h3>
+            <ul class="list">
+              <li>Entrega local</li>
+              <li>Envíos nacionales</li>
+              <li>Empaque seguro</li>
+            </ul>
+          </article>
+
+          <article class="panel">
+            <h3>Mayorista</h3>
+            <ul class="list">
+              <li>Precios por volumen</li>
+              <li>Catálogo enfocado a reventa</li>
+              <li>Asesoría para compra</li>
+            </ul>
+          </article>
+
+          <article class="panel">
+            <h3>Minorista</h3>
+            <ul class="list">
+              <li>Compra por unidad</li>
+              <li>Promos y combos</li>
+              <li>Novedades frecuentes</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Selector Split -->
+    <section id="selector" class="section">
+      <div class="wrap">
+        <div class="section__head">
+          <h2>Elige tu tipo de compra</h2>
+          <p>Pasa el mouse (o toca) para ver la info. Luego entra al flujo correcto.</p>
+        </div>
+      </div>
+
+      <div class="wrap">
+        <section class="split" aria-label="Selector Mayorista o Minorista">
+          <!-- MAYORISTA -->
+          <article class="pane pane--mayorista" data-pane="mayorista" role="button" tabindex="0" aria-label="Mayorista">
+            <div class="pane__shade"></div>
+            <div class="pane__content">
+              <span class="pane__tag">B2B</span>
+              <h3>Mayorista</h3>
+              <p>
+                Precios por volumen, condiciones para negocio y atención enfocada a reventa.
+              </p>
+
+              <div class="pane__meta">
+                <span>• Catálogo completo</span>
+                <span>• Volumen</span>
+                <span>• Soporte directo</span>
+              </div>
+
+              <div class="pane__actions">
+                <a class="btn btn--primary" id="go-mayorista" href="https://mayorista.vape4life.shop/">
+                  IR A MAYORISTA →
+                </a>
+                <a class="btn btn--ghost" id="wa-mayorista" href="https://wa.me/593XXXXXXXXX?text=Hola%20quiero%20info%20de%20MAYORISTA%20Vape4Life" target="_blank" rel="noopener">
+                  MÁS INFORMACIÓN
+                </a>
+              </div>
+            </div>
+          </article>
+
+          <!-- MINORISTA -->
+          <article class="pane pane--minorista" data-pane="minorista" role="button" tabindex="0" aria-label="Minorista">
+            <div class="pane__shade"></div>
+            <div class="pane__content">
+              <span class="pane__tag">Retail</span>
+              <h3>Minorista</h3>
+              <p>
+                Compra por unidad, promos retail y entrega rápida.
+              </p>
+
+              <div class="pane__meta">
+                <span>• Compra rápida</span>
+                <span>• Promos</span>
+                <span>• Entrega / envío</span>
+              </div>
+
+              <div class="pane__actions">
+                <a class="btn btn--primary" id="go-minorista" href="https://tienda.vape4life.shop/">
+                  IR A MINORISTA →
+                </a>
+                <a class="btn btn--ghost" id="wa-minorista" href="https://wa.me/593XXXXXXXXX?text=Hola%20quiero%20info%20de%20MINORISTA%20Vape4Life" target="_blank" rel="noopener">
+                  MÁS INFORMACIÓN
+                </a>
+              </div>
+            </div>
+          </article>
+        </section>
+      </div>
+
+      <div class="wrap note">
+        <p><b>Tip:</b> en móvil toca una vez para expandir, toca de nuevo para entrar.</p>
+      </div>
+    </section>
+
+    <!-- Contacto -->
+    <section id="contacto" class="section section--alt">
+      <div class="wrap">
+        <div class="section__head">
+          <h2>Contacto</h2>
+          <p>Ubicación, horarios y WhatsApp.</p>
+        </div>
+
+        <div class="grid2">
+          <article class="panel">
+            <h3>WhatsApp</h3>
+            <p>Te respondemos directo.</p>
+            <a class="btn btn--primary" href="https://wa.me/593XXXXXXXXX?text=Hola%20Vape4Life%2C%20quiero%20informaci%C3%B3n" target="_blank" rel="noopener">
+              Abrir WhatsApp →
+            </a>
+          </article>
+
+          <article class="panel">
+            <h3>Dirección y horario</h3>
+            <p>
+              <b>Dirección:</b> (pon aquí tu dirección)<br/>
+              <b>Horario:</b> 11:00 a 20:30
+            </p>
+            <a class="btn btn--ghost" href="https://maps.google.com/?q=Vape4Life" target="_blank" rel="noopener">
+              Ver en Google Maps
+            </a>
+          </article>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
-      <button class="link" id="reset">Cambiar elección</button>
-      <span class="muted">© Vape4Life</span>
+      <div class="wrap footer__inner">
+        <div class="footer__left">
+          <div class="brand brand--footer">
+            <span class="brand__mark">V4L</span>
+            <span class="brand__name">Vape4Life</span>
+          </div>
+          <div class="muted">© <span id="year"></span> Vape4Life. Todos los derechos reservados.</div>
+        </div>
+
+        <div class="footer__right">
+          <a href="#selector">Mayorista / Minorista</a>
+          <a href="#contacto">Contacto</a>
+          <button class="linklike" id="resetChoice" type="button">Cambiar elección</button>
+        </div>
+      </div>
     </footer>
   </main>
 
   <script src="assets/js/main.js"></script>
 </body>
 </html>
-
