--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         <div class="hero__copy">
           <div class="pill">Tienda • Ecuador • Envíos</div>
           <h1>
-            Vapeo premium, compra simple.
-            <span class="hero__subhead">Tu tienda minorista con atención real.</span>
+            Vape4Life, vapeo premium.
+            <span class="hero__subhead">Tu vapeshop preferida en QUITO.</span>
           </h1>
           <p>
-            Entra a la tienda minorista para comprar por unidad, promos y novedades.
-            Si compras para reventa, también tenemos portal mayorista.
+            "Explora nuestra selección de líquidos, sales de nicotina y dispositivos. 
+            ¡Nuevas promos cada semana!"
           </p>
 
           <div class="hero__actions">
