--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="pane__content">
               <span class="pane__tag">Retail</span>
               <h3>Minorista</h3>
-              <p>Compra por unidad, promos y novedades. Perfecto si compras para ti.</p>
+              <p>Compra por unidad, promos y novedades. Perfecto para ti.</p>
 
               <div class="pane__meta">
                 <span>Compra rápida</span>
